test/unique/neg/GetStarted.check
GetStarted.scala:10: error: not all required capabilities available
    consume(c)
           ^
one error found
